--- a/room_res/templates/home.html
+++ b/room_res/templates/home.html
@@ -1,4 +1,4 @@
-<form>
+<form action="" method="post">
   Room Id:<br>
   <input type="text" name="Room Id" value=""><br>
   Time:<br>
@@ -7,3 +7,7 @@
   <input type = "text" name ="Name" value=""><br><br>
   <input type="submit" value="Submit">
 </form>
+
+<div>
+    {{ name }}
+</div>
