--- a/room_res/templates/index.html
+++ b/room_res/templates/index.html
@@ -1,8 +1,31 @@
 <form action="" method="post">
   Room Id:<br>
   <input type="text" name="Room Id" value=""><br>
-  Time:<br>
-  <input type="text" name="Time" value=""><br>
+  Time:<select name="Time">
+    <option value="12:00am" selected>12am</option>
+    <option value="1:00am">1am</option>
+    <option value="2:00am">2am</option>
+    <option value="3:00am">3am</option>
+    <option value="4:00am">4am</option>
+    <option value="5:00am">5am</option>
+    <option value="6:00am">6am</option>
+    <option value="7:00am">7am</option>
+    <option value="8:00am">8am</option>
+    <option value="9:00am">9am</option>
+    <option value="10:00am">10am</option>
+    <option value="11:00am">11am</option>
+    <option value="1:00pm">12pm</option>
+    <option value="2:00pm">1pm</option>
+    <option value="3:00pm">3pm</option>
+    <option value="4:00pm">4pm</option>
+    <option value="5:00pm">5pm</option>
+    <option value="6:00pm">6pm</option>
+    <option value="7:00pm">7pm</option>
+    <option value="8:00pm">8pm</option>
+    <option value="9:00pm">9pm</option>
+    <option value="10:00pm">10pm</option>
+    <option value="11:00pm">11pm</option>
+    </select><br><br>
   Name:<br>
   <input type = "text" name ="Name" value=""><br><br>
   <input type="submit" value="Submit">
